# basicDemo

./: .clang-format  .clang-tidy  .gitignore  3_InferType.cpp  5_0_CodeAnalysis.cpp  5_DFAchecks.cpp  6_ExtractSmth.cpp  6_ExtractSmth.h  8_DoxygenSample.h  CMakeLists.txt  CMakePresets.json  ChangeSignature.cpp  ChangeSignature.h  DFAchecks.cpp  DFAchecks.h  DemoSamples.cpp  DemoSamples.h  Distance.cpp  Distance.h  DoxygenSample.cpp  DoxygenSample.h  ExtractSmth.cpp  ExtractSmth.h  GoToFail.cpp  GoToFail.h  InferType.cpp  InferType.h  License.txt  MacroCompletion.cpp  MacroCompletion.h  SmartCompletion.cpp  SmartCompletion.h  app.rb  main.cpp  newscript.sh
Boost_tests/: CMakeLists.txt  boost_demo_tests.cpp
CMake_support/: Boo.h  CMakeLists.txt  Lib_Func.h  main.cpp  my_script.sh
CTest_tests/: CMakeLists.txt
CUDA_support/: CMakeLists.txt  cuda_sample.cu
Catch2_devel/: CMakeLists.txt  CMakeLists.txt.in  test_failed.cpp  test_passed.cpp  test_skipped.cpp
Catch_tests/: CMakeLists.txt  sample_lib.cpp  sample_lib.h  sample_test.cpp
Code_Analysis/: CMakeLists.txt  Clang_Tidy_cppcoreguidelines.cpp  Clang_Tidy_google.cpp  Clang_Tidy_modernize.cpp  Clang_Tidy_options.cpp  CodeAnalysis.cpp  DFAchecks.cpp  GoToFail.cpp  MISRA_inspections.cpp  argument_selection_inspection.cpp  code_analysis_summary.cpp  cppcast_quickfixes.cpp  lifetime_safety_samples.cpp  naming_inspections.cpp
Code_Generation/: CMakeLists.txt  Distance.h
Completion/: CMakeLists.txt  MacroCompletion.cpp  SmartCompletion.cpp  concepts.cpp  postfix.cpp  xmacro.txt
Coverage/: CMakeLists.txt  main.cpp
Debug_demo/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  CMakeLists.txt  Collisions.cpp  Collisions.h  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  GameWidget.cpp  GameWidget.h  main.cpp  printers.cpp  qstring.py  test.cpp
Debug_extra/: CMakeLists.txt  Memory_view.cpp  MyPoint.natvis  Win_debug_natvis.cpp
Debug_extra/FreeRTOS_demo/: CMakeLists.txt  Makefile  main.c  trcConfig.h
Doctest_tests/: CMakeLists.txt  TestBase.cpp  doctest.h
Documentation/: CMakeLists.txt  DoxygenSample.h  InferType.cpp  MacroDebug.cpp  MacroReplacement.cpp  OverloadsDebug.cpp  Task_reminders.cpp  TypeDebug.cpp  ValuesOnHover.cpp  evaluate_costants.cpp
Editor/: CMakeLists.txt  Operator_usages_highlight.cpp  breadcrumbs.cpp  concepts.cpp  control_statements_folding.cpp  cpp20.cpp  croutines.cpp  hints.cpp  ide_macro.cpp  injected_languages.cpp  operator_usages_highlight.cpp  unwrap.cpp
ElevatorPitch/: CMakeLists.txt  main.cpp
Modules/: AdvancedMath.cppm  CMakeLists.txt  language.cppm  main.cpp
Navigation/: Ball.h  CMakeLists.txt  SomeSources.cpp
Param_Info/: CMakeLists.txt  param_info_deduction_guides.cpp
Profiler/: CMakeLists.txt  merge_sort.cpp  thread_app.cpp
Refactoring/: CMakeLists.txt  ChangeSignature.cpp  ExtractLambda.cpp  ExtractSmth.cpp  ExtractSmth.h  PullMembers.cpp  Refactor_Hierarchies.h  Rename.cpp  refactoring_summary.cpp
Remote_Dev/: CMakeLists.txt  config_switch.cpp  sys_info_printer.cpp
Resolve_Context/: CMakeLists.txt  resolve_context.cpp
Resolve_Context/Flag_target/: CMakeLists.txt
Resolve_Context/No_flag_target/: CMakeLists.txt
Sanitizers/: CMakeLists.txt
Sanitizers/UMR/: CMakeLists.txt  memory_error_case.cpp
Sanitizers/data_race/: CMakeLists.txt  data_race_case.cpp
Sanitizers/data_race_2/: CMakeLists.txt
Sanitizers/global_buffer_overflow/: CMakeLists.txt  global_buffer_overflow_case.cpp
Sanitizers/heap_buffer_overflow/: CMakeLists.txt  heap_buffer_overflow_case.cpp
Sanitizers/stack_buffer_overflow/: CMakeLists.txt  stack_buffer_overflow_case.cpp
Sanitizers/use_after_free/: CMakeLists.txt  use_after_free_case.cpp
StartNewDemo/: Animals.cpp  Animals.h  CMakeLists.txt  Human.cpp  Human.h  main.cpp
Valgrind_memcheck/: BinaryTree.h  CMakeLists.txt  memtest.cpp
point_lib/: Point.h
precompiled_header/: CMakeLists.txt  color_point.cpp
